# okota

./: .gitignore
python/: CHANGELOG  MANIFEST.in  README.md  requirements.txt  setup.cfg
python/okota/accounts_index/: accounts_index.py
python/okota/accounts_index/runnable/: deploy.py
python/okota/contract_registry/: registry.py
python/okota/contract_registry/runnable/: deploy.py
python/okota/data/: AccountsIndexAddressDeclarator.json  TokenUniqueSymbolIndexAddressDeclarator.json
python/okota/token_index/: index.py  interface.py
python/okota/token_index/runnable/: deploy.py
python/tests/: test_accounts_index.py  test_registry.py  test_tokenindex.py
solidity/: AccountsIndexAddressDeclarator.sol  Makefile  RegistryAddressDeclarator.sol  TokenUniqueSymbolIndexAddressDeclarator.sol
