[metadata]
name = okota
version = 0.3.0
description = Registries for CIC using the eth-address-index backend
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/cicnet/okota
keywords =
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.6
packages =
	okota
	okota.token_index
	okota.token_index.runnable
	okota.contract_registry
	okota.contract_registry.runnable
	okota.accounts_index
	okota.accounts_index.runnable

[options.extras_require]
testing =
	eth-tester==0.5.0b2
	py-evm==0.3.0a20

[options.package_data]
* = 
	#data/AddressDeclarator.json
	#data/AddressDeclarator.bin
	#data/GiftableToken.bin
	#data/GifttableToken.json
	data/TokenUniqueSymbolIndexAddressDeclarator.bin
	data/TokenUniqueSymbolIndexAddressDeclarator.json
	data/AccountsIndexAddressDeclarator.bin
	data/AccountsIndexAddressDeclarator.json
	data/RegistryAddressDeclarator.bin
	data/RegistryAddressDeclarator.json
	data/ERC20.json

[options.entry_points]
console_scripts =
	okota-accounts-index-deploy = okota.accounts_index.runnable.deploy:main
	okota-token-index-deploy = okota.token_index.runnable.deploy:main
	okota-contract-registry-deploy = okota.contract_registry.runnable.deploy:main
